# f2008-parselglossy

./: .editorconfig  .envrc  .travis.yml  CMakeLists.txt  README.md  README.rst
src/: CMakeLists.txt  example.f90
